--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fetch-hook": "^1.9.5",
+    "react-is": "^19.1.0",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.4",
